动画效果测试。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name=".activity.PWActivity"
             android:label="@string/title_activity_pw"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.DHActivity"></activity>
     </application>
 
 </manifest>
