--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:label="@string/title_activity_pw"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.DHActivity" />
-        <activity android:name=".activity.test.MoveActivity"></activity>
+        <activity android:name=".activity.test.MoveActivity" />
+        <activity android:name=".activity.test.MoveTestActivity"></activity>
     </application>
 
 </manifest>
