--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,15 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.DHActivity" />
         <activity android:name=".activity.test.MoveActivity" />
-        <activity android:name=".activity.test.MoveTestActivity"></activity>
+        <activity android:name=".activity.test.MoveTestActivity" />
+        <activity android:name=".activity.test.TestActivity" />
+        <activity android:name=".activity.test.MoveImageActivity" />
+        <activity android:name=".activity.test.MoveViewGroupActivity" />
+        <activity android:name=".activity.handler.HandlerOneActivity" />
+        <activity android:name=".activity.handler.MHandlerTwoActivity" />
+        <activity android:name=".activity.handler.HandlerThreeActivity" />
+        <activity android:name=".activity.handler.HandlerFourActivity" />
+        <activity android:name=".activity.handler.HandlerFiveActivity"></activity>
     </application>
 
 </manifest>
