--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,14 @@
         <activity android:name=".activity.test.MoveImageActivity" />
         <activity android:name=".activity.test.MoveViewGroupActivity" />
         <activity android:name=".activity.handler.HandlerOneActivity" />
-        <activity android:name=".activity.handler.MHandlerTwoActivity" />
+        <activity android:name=".activity.handler.MoveTwoTestActivity" />
         <activity android:name=".activity.handler.HandlerThreeActivity" />
         <activity android:name=".activity.handler.HandlerFourActivity" />
-        <activity android:name=".activity.handler.HandlerFiveActivity"></activity>
+        <activity android:name=".activity.handler.HandlerFiveActivity" />
+        <activity android:name=".activity.move.MoveOneActivity" />
+        <activity android:name=".activity.move.MoveTwoActivity" />
+        <activity android:name=".activity.move.MoveThreeActivity" />
+        <activity android:name=".activity.move.MoveFourActivity"></activity>
     </application>
 
 </manifest>
