--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".activity.customview.CustomViewSixActivity"/>
         <activity android:name=".activity.customview.CustomViewSevenActivity"/>
         <activity android:name=".activity.customview.CustomViewEightActivity"/>
+        <activity android:name=".activity.popupwindow.OrderParticularsActivity"/>
     </application>
 
 </manifest>
