fragment和viewpager联合使用。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".activity.popupwindow.OrderParticularsActivity"/>
         <activity android:name=".activity.fragmentone.OneFragmentActivity"/>
         <activity android:name=".activity.fragmenttwo.FragmentTwoActivity"/>
+        <activity android:name=".activity.fragmentthree.ThreeFragmentActivity"/>
     </application>
 
 </manifest>
