listview嵌套listview使用布局搭建。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".activity.fragmentone.OneFragmentActivity"/>
         <activity android:name=".activity.fragmenttwo.FragmentTwoActivity"/>
         <activity android:name=".activity.fragmentthree.ThreeFragmentActivity"/>
+        <activity android:name=".activity.fragmentfour.ListViewNestListViewActivity"/>
     </application>
 
 </manifest>
