--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".activity.fragmenttwo.FragmentTwoActivity"/>
         <activity android:name=".activity.fragmentthree.ThreeFragmentActivity"/>
         <activity android:name=".activity.fragmentfour.ListViewNestListViewActivity"/>
+        <activity android:name=".activity.fragmentfive.AllSelectActivity"/>
     </application>
 
 </manifest>
