模拟项目listview嵌套listview实现添加服务条目功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".activity.fragmentthree.ThreeFragmentActivity"/>
         <activity android:name=".activity.fragmentfour.ListViewNestListViewActivity"/>
         <activity android:name=".activity.fragmentfive.AllSelectActivity"/>
+        <activity android:name=".activity.fragmentsix.FragmentSixActivity"/>
     </application>
 
 </manifest>
