--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,16 +25,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     //butterknife
     compile 'com.android.support:appcompat-v7:25.3.1'
-
     compile 'com.jakewharton:butterknife:8.1.0'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile project(':pulltorefresh')
 }
