--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,7 +169,10 @@
         <activity android:name=".activity.ten.six.TenSixActivity"/>
         <activity android:name=".activity.ten.six.TaskManageActivity"/>
         <activity android:name=".activity.ten.four.TenFourTwoActivity"/>
-        <activity android:name=".activity.ten.seven.TenSevenActivity"/>
+        <activity android:name=".activity.ten.seven.TenSevenActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
+        <activity android:name=".activity.eleven.one.ElevenOneActivity"/>
 
 
 
