--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,53 +71,44 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
     // TODO greenDao 使用第三步
-    compile 'org.greenrobot:greendao:3.2.2'// add library
+    compile 'org.greenrobot:greendao:3.2.2'
+    // add library
     compile 'org.greenrobot:greendao-generator:3.2.2'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-
     compile 'com.google.code.gson:gson:2.8.5'
-
     // 极光推送
-    compile 'cn.jiguang.sdk:jpush:3.1.1'  // 此处以JPush 3.1.1 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.9'  // 此处以JCore 1.1.9 版本为例。
-
-
+    compile 'cn.jiguang.sdk:jpush:3.1.1'
+    // 此处以JPush 3.1.1 版本为例。
+    compile 'cn.jiguang.sdk:jcore:1.1.9'
+    // 此处以JCore 1.1.9 版本为例。
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
-
-
     compile 'com.github.Othershe:DUtil:1.1.1'
-
     compile 'com.othershe:BaseAdapter:1.1.0'
-
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+    //  图表使用
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
     // required, enough for most devices.
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
-
-//    // Other ABIs: optional
-//    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.8'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.8'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
-//    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
-//
-//    // ExoPlayer as IMediaPlayer: optional, experimental
-//    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
-
-
+    //    // Other ABIs: optional
+    //    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.8'
+    //    compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.8.8'
+    //    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.8'
+    //    compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.8'
+    //
+    //    // ExoPlayer as IMediaPlayer: optional, experimental
+    //    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
+    implementation files('lib/pinyin4j-2.5.0.jar')
 }
 
 //apt {
