--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 29
@@ -37,13 +36,13 @@ android {
 }
 
 // TODO greenDao 使用第二步
-greendao {
-    schemaVersion 5 // 数据库版本号
-    daoPackage 'com.fpp.status.greendao'   // greenDao 自动生成的代码保存的包名
-    targetGenDir 'src/main/java' //自动生成的代码存储的路径，默认是 build/generated/source/greendao.
-    generateTests false //true的时候自动生成测试单元
-    // targetGenDirTests:    // 测试单元的生成目录默认是 src/androidTest/java
-}
+//greendao {
+//    schemaVersion 5 // 数据库版本号
+//    daoPackage 'com.fpp.status.greendao'   // greenDao 自动生成的代码保存的包名
+//    targetGenDir 'src/main/java' //自动生成的代码存储的路径，默认是 build/generated/source/greendao.
+//    generateTests false //true的时候自动生成测试单元
+//    // targetGenDirTests:    // 测试单元的生成目录默认是 src/androidTest/java
+//}
 // TODO greenDao 使用第四步
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
