--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ android {
         }
     }
 
-    // To use deprecated test classes on SDK 28+. https://developer.android.com/training/testing/set-up-project
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
     compileOptions {
@@ -64,10 +63,10 @@ greendao {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //butterknife
     implementation 'com.android.support.constraint:constraint-layout:2.0.2'
     testImplementation 'junit:junit:4.13'
     implementation 'org.greenrobot:eventbus:3.2.0'
@@ -81,10 +80,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'io.reactivex:rxjava:1.1.5'
     implementation 'io.reactivex:rxandroid:1.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.anrwatchdog:anrwatchdog:1.3.0'
@@ -109,9 +108,4 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
 }
 
-//apt {
-//    arguments {
-//        eventBusIndex "com.whoislcj.eventbus.MyEventBusIndex"
-//    }
-//}
 
