--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,10 +49,15 @@
         android:name=".base.BaseApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="icon,label,theme">
-        <activity android:name=".activity.one.OneActivity"></activity>
+        android:usesCleartextTraffic="true"
+        tools:replace="icon,label,theme"
+        tools:targetApi="n">
+        <activity android:name=".activity.twelve.one.Oss2Activity"></activity>
+        <activity android:name=".activity.twelve.one.OssActivity" />
+        <activity android:name=".activity.one.OneActivity" />
         <activity android:name=".activity.eleven.eight.NfcActivity" />
         <activity android:name=".activity.eleven.six.BarcodeScannerActivity" />
         <activity android:name=".activity.eleven.five.KeyBoardActivity" />
