--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" /> <!-- 添加访问手机位置的权限 -->
-
     <!-- ******************** 通讯录相关权限 ******************** -->
     <!-- ******************** 位置相关权限 ******************** -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -55,12 +54,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="icon,label,theme"
         tools:targetApi="n">
-        <activity android:name=".activity.twelve.three.AlarmManagerActivity"></activity>
+        <activity android:name=".activity.twelve.two.SSActivity"/>
+        <activity android:name=".activity.twelve.three.AlarmManagerActivity" />
         <activity android:name=".activity.twelve.one.Oss2Activity" />
         <activity android:name=".activity.twelve.one.OssActivity" />
         <activity android:name=".activity.one.OneActivity" />
